# midi-piano-pi-server

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: disklavier.yaml.example  midi-piano-pi.yaml.example
config/pipewire.conf.d/: raop-sink.conf
scripts/: midi-autoconnect.sh
src/disklavier/: __init__.py  __main__.py
src/disklavier/api/: __init__.py  app.py
src/disklavier/api/routes/: catalog.py  files.py  piano.py  playback.py  status.py
src/disklavier/api/websocket/: __init__.py  piano_handler.py
src/disklavier/core/: __init__.py  config.py  midi_controller.py  midi_player.py
src/disklavier/utils/: __init__.py
src/midi_piano_pi/: __init__.py  __main__.py
src/midi_piano_pi/api/: __init__.py  app.py
src/midi_piano_pi/api/routes/: playback.py  status.py
src/midi_piano_pi/api/websocket/: __init__.py
src/midi_piano_pi/core/: __init__.py  config.py  midi_controller.py  midi_player.py
src/midi_piano_pi/utils/: __init__.py
systemd/: disklavier-web.service  fluidsynth-broadcast.service  midi-autoconnect.service  midi-autoconnect.timer  midi-piano-pi-web.service  rtpmidid.service
web/: index.html
web/css/: main.css  piano.css
web/js/: app.js  catalog.js  piano.js  player.js  websocket.js
