[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disklavier-pi"
version = "0.1.0"
description = "Turn your Yamaha Disklavier DKC-800 into a network-enabled smart piano"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "David" }
]
keywords = ["disklavier", "midi", "piano", "yamaha", "raspberry-pi", "airplay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-rtmidi>=1.5.0",
    "mido>=1.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
disklavier = "disklavier.__main__:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/disklavier-pi"
Repository = "https://github.com/YOUR_USERNAME/disklavier-pi"
Issues = "https://github.com/YOUR_USERNAME/disklavier-pi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/disklavier"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/web",
    "/config",
    "/systemd",
]
